# chat-cluster

./: .gitignore  README.md  cluster-config.yaml
chat-client/: Cargo.toml
chat-client/src/: chat_client.rs  lib.rs  main.rs
chat-client/src/tests/: chat_client.rs
k8s/: cluster-config.yaml  cluster_config.yaml  create_cluster.sh  publish_chat_client_image.sh  publish_image.sh  publish_images.sh  setup_cluster.sh  variables.sh
k8s/helm/chat-cluster/: Chart.yaml
k8s/helm/chat-cluster/templates/: chat-client.yaml  chat-server.yaml  cluster_config.yaml  ingress.yaml  message-broker.yaml  replication-log.yaml
rust-workspace/: Cargo.toml  Dockerfile  chat-client.Dockerfile
rust-workspace/binaries/chat-client/: Cargo.toml
rust-workspace/binaries/chat-client/src/: channel_subscriber.rs  chat_client.rs  main.rs
rust-workspace/binaries/chat-client/src/tests/: chat_client.rs
rust-workspace/binaries/chat-server/: Cargo.toml
rust-workspace/binaries/chat-server/src/: channel_subscriber.rs  chat_server.rs  lib.rs  main.rs  replication_log_client.rs
rust-workspace/binaries/chat-server/src/tests/: chat_server.rs  mod.rs  replication_log_client.rs
rust-workspace/binaries/replication-log/: Cargo.toml
rust-workspace/binaries/replication-log/src/: main.rs  message_log.rs
rust-workspace/binaries/replication-log/src/tests/: message_log.rs  mod.rs
rust-workspace/chat-client/: Cargo.toml
rust-workspace/chat-client/src/: lib.rs
rust-workspace/chat-client/src/tests/: chat_client.rs
rust-workspace/common/: Cargo.toml
rust-workspace/common/src/: lib.rs  stream_to_vec_forwarder.rs
rust-workspace/crates/common/: Cargo.toml
rust-workspace/crates/common/src/: lib.rs  stream_to_vec_forwarder.rs
rust-workspace/replication-log/: Cargo.toml
rust-workspace/replication-log/src/: lib.rs  main.rs  message_log.rs
rust-workspace/replication-log/src/tests/: mod.rs
server/: Cargo.toml  Dockerfile
server/src/: channel_subscriber.rs  chat_client.rs  incoming_message_manager.rs  lib.rs  main.rs
server/src/tests/: chat_client.rs  mod.rs
