[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
async-trait = "0.1"
futures = "0.3"
redis = {version = "0.21", features = ["aio", "tokio-comp"]}
thiserror = "1.0"
tokio = {version = "1.20", features = ["macros", "rt-multi-thread"]}
warp = "0.3"
