[package]
name = "replication-log"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#TODO prune dependencies
[dependencies]
common = { path = "../common/" }

anyhow = "1.0"
async-trait = "0.1"
dashmap = "5.3"
futures = "0.3"
redis = { version = "0.21", features = ["aio", "tokio-comp"] }
stream-cancel = "0.8"
thiserror = "1.0"
tokio = { version = "1.20", features = ["macros", "rt-multi-thread"] }
warp = "0.3"

[dev-dependencies]
insta = "1.18"
tokio-stream = { version = "0.1", features = ["sync"] }
