[package]
name = "chat-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../../crates//common" }

anyhow = { workspace = true }
async-trait = "0.1"
dashmap = "5.3"
futures = { workspace = true }
redis = { workspace = true }
tokio = { workspace = true }
warp = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
