[package]
name = "replication-log"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../../crates//common" }

anyhow = { workspace = true }
futures = { workspace = true }
redis = { workspace = true }
tokio = { workspace = true }
warp = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
